fixed logo alignment

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -78,7 +78,7 @@ html {
 /* About section */
 .sidebar-about h1 {
   color: #fff;
-  margin-top: 0;
+  margin: 0 auto;
   font-family: "Abril Fatface", serif;
   font-size: 3.25rem;
 }
